--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="eduspace-banner-header">
-                            <h2>About</h2>
+                            <h2>about</h2>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index-3.html">Home</a></li>
                                 <li class="breadcrumb-item active">About</li>
@@ -164,7 +164,7 @@
                     <div class="col-lg-12">
                         <div class="edu-title">
                             <h2>service</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, placeat saepe quasi magnam totam exercitationem.</p>
+                            <p>Space Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, placeat saepe quasi magnam totam exercitationem.</p>
                         </div>
                     </div>
                 </div>
