--- a/blog-list.html
+++ b/blog-list.html
@@ -62,7 +62,7 @@
                         <div class="header-top-right">
                             <ul>
                                 <li>
-                                    <a href="login.html" data-toggle="modal" data-target="#myModal"><i class="fa fa-user"></i>login</a>
+                                    <a href="login.html"><i class="fa fa-user"></i>Login</a>
                                 </li>
                                 <li><a href="registration.html"><i class="fa fa-sign-in"></i>Register</a></li>
                             </ul>
@@ -110,7 +110,6 @@
                                                 <li><a href="login.html">login</a></li>
                                                 <li><a href="registration.html">registration</a></li>
                                                 <li><a href="faq.html">faq</a></li>
-                                                <li><a href="404.html">404</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#">Blog<span class="caret"><i class="fa fa-angle-down"></i></span></a>
