--- a/faq.html
+++ b/faq.html
@@ -62,7 +62,7 @@
                         <div class="header-top-right">
                             <ul>
                                 <li>
-                                    <a href="login.html" data-toggle="modal" data-target="#myModal"><i class="fa fa-user"></i>login</a>
+                                    <a href="login.html" <i class="fa fa-user"></i>Login</a>
                                 </li>
                                 <li><a href="registration.html"><i class="fa fa-sign-in"></i>Register</a></li>
                             </ul>
@@ -78,18 +78,14 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-12">
                             <div class="logo">
-                                <a href="index-3.html"><img src="assets/img/logo.png" alt="" /></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9 col-sm-12">
                             <div class="main-menu">
                                 <nav>
                                     <ul>
-                                        <li class="active"><a href="#">Home<span class="caret"><i class="fa fa-angle-down"></i></span></a>
-                                            <ul class="sub-menu">
-                                                <li><a href="index-1.html">home-1</a></li>
-                                                <li><a href="index-2.html">home-2</a></li>
-                                            </ul>
+                                       <li class="active"><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="#">course<span class="caret"><i class="fa fa-angle-down"></i></span></a>
@@ -110,7 +106,6 @@
                                                 <li><a href="login.html">login</a></li>
                                                 <li><a href="registration.html">registration</a></li>
                                                 <li><a href="faq.html">faq</a></li>
-                                                <li><a href="404.html">404</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#">Blog<span class="caret"><i class="fa fa-angle-down"></i></span></a>
