--- a/course-details.html
+++ b/course-details.html
@@ -62,7 +62,7 @@
                         <div class="header-top-right">
                             <ul>
                                 <li>
-                                    <a href="login.html" data-toggle="modal" data-target="#myModal"><i class="fa fa-user"></i>login</a>
+                                    <a href="login.html"><i class="fa fa-user"></i>Login</a>
                                 </li>
                                 <li><a href="registration.html"><i class="fa fa-sign-in"></i>Register</a></li>
                             </ul>
@@ -78,7 +78,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-12">
                             <div class="logo">
-                                <a href="index-3.html"><img src="assets/img/logo.png" alt="" /></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9 col-sm-12">
@@ -110,7 +110,6 @@
                                                 <li><a href="login.html">login</a></li>
                                                 <li><a href="registration.html">registration</a></li>
                                                 <li><a href="faq.html">faq</a></li>
-                                                <li><a href="404.html">404</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="#">Blog<span class="caret"><i class="fa fa-angle-down"></i></span></a>
