--- a/blog-list.html
+++ b/blog-list.html
@@ -78,18 +78,14 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-3 col-sm-12">
                             <div class="logo">
-                                <a href="index-3.html"><img src="assets/img/logo.png" alt="" /></a>
+                                <a href="index.html"><img src="assets/img/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9 col-sm-12">
                             <div class="main-menu">
                                 <nav>
                                     <ul>
-                                        <li class="active"><a href="#">Home<span class="caret"><i class="fa fa-angle-down"></i></span></a>
-                                            <ul class="sub-menu">
-                                                <li><a href="index-1.html">home-1</a></li>
-                                                <li><a href="index-2.html">home-2</a></li>
-                                            </ul>
+                                      <li class="active"><a href="index.html">Home</a>
                                         </li>
                                         <li><a href="about.html">About</a></li>
                                         <li><a href="#">course<span class="caret"><i class="fa fa-angle-down"></i></span></a>
